Images added in folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="styelsheet" href="./styles.css"/>
 </head>
 <body>
+    <div class="container">
+        <img src="./Images/one.jpg"/>
+
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
