Next & Preview button added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slideshow</title>
-    <link rel="styelsheet" href="./styles.css"/>
+   <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
     <div class="container">
-        <img src="./Images/one.jpg"/>
+        <img src="./Images/one.jpg" class="slide"/>
+        <img src="./Images/Previous-one.png" class="ico-prev"/>
+        <img src="./Images/Next-0ne.png" class="ico-next"/>
 
     </div>
     <script src="./script.js"></script>
