--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <img src="./Images/one.jpg" class="slide"/>
-        <img src="./Images/Previous-one.png" class="ico-prev"/>
-        <img src="./Images/Next-0ne.png" class="ico-next"/>
+        <img src="./Images/previous (1).png" class="ico-action ico-prev"/>
+        <img src="./Images/next (2).png" class="ico-action ico-next"/>
 
     </div>
     <script src="./script.js"></script>
