if else use for image slider

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container">
-        <img src="./Images/one.jpg" class="slide" id="slide"/>
+        <img src="./images/one.jpg" class="slide" id="slide"/>
 
-        <img src="./Images/previous (1).png" class="ico-action ico-prev" onclick="prev()" />
-        <img src="./Images/next (2).png" class="ico-action ico-next" onclick="next()" />
+        <img src="./images/previous (1).png" class="ico-action ico-prev" onclick="prev()" />
+        <img src="./images/next (2).png" class="ico-action ico-next" onclick="next()" />
 
     </div>
     <script src="./script.js"></script>
